# brian

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt  start.sh  swagger.yml
alembic/: env.py
alembic/versions/: 1b23a80af453_added_createdby_column_to_events.py  6a643ce5f814_baseline.py  fb55c4c02cf6_added_event_table.py
encoder/: Pipfile
encoder/src/: app.py
encoder/src/model/: base.py  generator.py
enrollment/: main.go
enrollment/controllers/: attendeeControllers.go  authControllers.go  eventownerControllers.go
enrollment/models/: attendee.go  base.go  eventowner.go  features.go
enrollment/utils/: util.go
identifier/: Dockerfile  Pipfile  app.py  start.sh
identifier/model/: encoding.py
identifier/src/: app.py
identifier/src/model/: encoding.py
krakend/: krakend.json
migrations/versions/: 57e995e37377_.py  8c8038f6b0d1_.py  9ef7f009f00f_.py
monolith/: Dockerfile  Pipfile
monolith/src/: app.py
monolith/src/model/: attendee.py  base.py  comparator.py  eventowner.py  features.py  generator.py
src/: app.py  config.py  face.py
src/common/: common.py  decode_image.py  image.py  jwt.py  seed.py
src/middleware/: auth.py
src/model/: admin.py  attendance.py  attendee.py  base.py  camera.py  comparator.py  event.py  event_owner.py  eventowner.py  feature.py  features.py  location.py  role.py  student.py  user.py
